--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -22,6 +22,10 @@ h1, h2, h3
 	text-align: center;
 }
 
+table tr:nth-child(odd) {
+	background-color: rgb(39, 39, 39);
+	color: #fff; }
+
 h3
 {
 	font-size: 200%;
