--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,41 +1,48 @@
 body
 {
 	font-family: Cochin;
-	color: darkolivegreen ;
-	background-color:ivory;
+	color: lightgoldenrodyellow ;
+	background-color:darkred;
     margin-left: 75px;
 	margin-right: 75px;
+	font-size: 15px;
 }
 
 
 header, footer
 {
 	text-align: center;
-	color:darkolivegreen;
+	color:lightgoldenrodyellow;
 	font-weight: bold;
+	font-size: 15px;
 }
 
 h1, h2, h3
 {
-	color: darkolivegreen;
+	color: lightgoldenrodyellow;
 	font-family: Cambria, Cochin, Georgia, Times;
 	text-align: center;
+	font-size: 15px;
+	padding: 5px;
 }
 
 table tr:nth-child(odd) {
-	background-color: rgb(39, 39, 39);
+	background-color: darkred);
 	color: #fff; }
+
 
 h3
 {
 	font-size: 200%;
 	line-height: 0px;
+	font-size: 18px;
 }
 
 a
 {
 	text-decoration: none;
-	color:purple;
+	color:lightgoldenrodyellow;
+	font-size: 18px;
 }
 
 a:hover
