--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,8 +1,8 @@
 body
 {
 	font-family: Cochin;
-	color: lightgoldenrodyellow ;
-	background-color:darkred;
+	color: gainsboro ;
+	background-color:rgba(98, 102, 91, 0.795);
     margin-left: 75px;
 	margin-right: 75px;
 	font-size: 15px;
@@ -12,26 +12,26 @@ body
 header, footer
 {
 	text-align: center;
-	color:lightgoldenrodyellow;
+	color:black;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 60px;
 }
 
 h1, h2, h3
 {
-	color: lightgoldenrodyellow;
+	color: rgb(0, 0, 0);
 	font-family: Cambria, Cochin, Georgia, Times;
 	text-align: center;
-	font-size: 15px;
+	font-size: 60px;
 	padding: 5px;
 }
 
 table tr:nth-child(odd) {
-	background-color: darkred;
-	color: #fff; }
+	background-color: rgb(0, 0, 0);
+	color: rgb(0, 0, 0); }
 
 
-h3
+h2
 {
 	font-size: 200%;
 	line-height: 0px;
@@ -41,9 +41,11 @@ h3
 a
 {
 	text-decoration: none;
-	color:lightgoldenrodyellow;
+	color:rgb(0, 0, 0);
 	font-size: 18px;
 }
+
+
 
 a:hover
 {
