--- a/itis3135/styles/activity7.css
+++ b/itis3135/styles/activity7.css
@@ -23,7 +23,7 @@
       .Calculator > button {
         cursor: pointer;
         font-size: 2rem;
-        border: 1px, solid #000000;
+        border: #000000;
         outline: none;
         background-color: #b8b8b865;
       }
@@ -35,7 +35,7 @@
         .span-two {
           grid-column: span 2;
           color: #000000;
-          background-color: #000000;
+          background-color: #00000000;
         }
   
         .output{
