--- a/jfairProject/styles/default.css
+++ b/jfairProject/styles/default.css
@@ -6,9 +6,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 body {
-    margin:50px;
     font-family:'Khula';
     text-align:center;
+    margin: 40px;
 }
   
 #container {
@@ -19,20 +19,20 @@ body {
 }
   
 #flip {
-    height:70px;
+    height:100px;
     overflow:hidden;
 }
   
 #flip > div > div {
     color:#ffffffb9;
-    padding:2px 12px;
+    padding:5px 12px;
     height:40px;
     margin-bottom:44px;
     display:inline-block;
 }
   
 #flip div:first-child {
-    animation: show 7s linear infinite;
+    animation: show 5s linear infinite;
 }
   
 #flip div div {
@@ -58,15 +58,10 @@ body {
     100% {margin-top:-270px;}
 }
 
-textarea {
-    width: 100%;
-    height: 300px;
+div {
+    margin-bottom: 20px;
 }
 
-.centered-container {
-    width: 400px;
-    height: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+button {
+    cursor: pointer;
 }
